# CanvasView

./: .clangd  .gitignore  CMakeLists.txt  TextHelp.h  Vector2.h  main.cpp  ui.h
buildfiles/: Info.plist  icon.icns  wicon.rc
